--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,8 +18,8 @@
     button { background: #3498db; color: white; border: none; padding: 10px 15px; border-radius: 4px; cursor: pointer; }
     button:hover { background: #2980b9; }
     .error { color: #e74c3c; margin: 10px 0; }
-    .articles-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; }
-    .article-card { border: 1px solid #eee; padding: 15px; border-radius: 8px; }
+    .articles-grid { display: grid; gap: 20px; }
+    .article-card {filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.5)); border: 2px solid #eee; padding: 15px; border-radius: 8px; }
     </style>
   </head>
   <body>
